objects/Account.object
<CustomObject>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aadhar_no__c</fullName>
        <description>case study</description>
        <externalId>true</externalId>
        <inlineHelpText>Enter aadhar number</inlineHelpText>
        <label>Aadhar no</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>House_address__c</fullName>
        <description>case study</description>
        <inlineHelpText>Enetr house address</inlineHelpText>
        <label>House address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Priority_field__c</fullName>
        <description>case study</description>
        <inlineHelpText>Please select any for these</inlineHelpText>
        <label>Priority field</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>individual_Name__c</fullName>
        <description>case study</description>
        <inlineHelpText>Enetr a individual name</inlineHelpText>
        <label>individual Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_of_Contacts__c</fullName>
        <label>Count of Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <description>case study</description>
        <inlineHelpText>Enter organization Name</inlineHelpText>
        <label>Organization Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Contacts__c</fullName>
        <label>Number of Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Locations__c</fullName>
        <label>Number of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>individual_phone_no__c</fullName>
        <description>case study</description>
        <inlineHelpText>Enetr phone no</inlineHelpText>
        <label>individual phone no</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>organization_pan_no__c</fullName>
        <description>case study</description>
        <inlineHelpText>Enter Organization PAN no</inlineHelpText>
        <label>organization pan no</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization_address__c</fullName>
        <description>case study</description>
        <inlineHelpText>Enter organization address</inlineHelpText>
        <label>Organization address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>organization_CEO_name__c</fullName>
        <description>case study</description>
        <inlineHelpText>Enetr CEO Name</inlineHelpText>
        <label>organization CEO name</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>individual_account</fullName>
        <active>true</active>
        <description>case study</description>
        <label>individual account</label>
    </recordTypes>
    <recordTypes>
        <fullName>organization_account</fullName>
        <active>true</active>
        <description>case study</description>
        <label>organization account</label>
    </recordTypes>
    <validationRules>
        <fullName>Priority_field_rule</fullName>
        <active>true</active>
        <description>case study</description>
        <errorConditionFormula>AND( ISPICKVAL(  PRIORVALUE( Priority_field__c ) , &apos;High&apos;) , ISPICKVAL( Priority_field__c , &apos;Low&apos;))</errorConditionFormula>
        <errorDisplayField>Priority_field__c</errorDisplayField>
        <errorMessage>It cant be change</errorMessage>
    </validationRules>
</CustomObject>